fix: Hide navbar backdrop on iOS/Safari using a `@supports` query.

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1356,6 +1356,12 @@ body {
     );
   }
 
+  @supports (-webkit-touch-callout: none) {
+    .navbar-backdrop {
+      display: none;
+    }
+  }
+
   .footer {
     padding: 40px 20px 80px 20px;
 
